--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "serve": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vite build",
     "lint": "eslint src",
     "format": "prettier --write '{src/**/*,*}.{js,ts,vue,json}'"
   },
